--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,5 +21,10 @@ pipeline {
                 sh 'python main.py'
             }
         }
+        stage('End'){
+            steps{
+                echo 'ending...'
+            }
+        }
     }
 }
